# Benternet-service-project

./: .gitmodules  README.md  you are the narrator in a fantasy advent.md
app/: .gitignore  CMakeLists.txt  main.cpp
app/client/: CMakeLists.txt  client.cpp
app/server/: CMakeLists.txt  server.cpp
app/server/include/: BManager.h  Chat_API.hpp  ElementTypes.h  LLMInference.h  Topics.h  chat_manager.h  dnd_session.h  helper.h
app/server/src/: BManager.cpp  CategoryEvents.cpp  CategorySocket.cpp  DNDtopic.cpp  ElementTypes.cpp  MainTopic.cpp  Topics.cpp  chat_manager.cpp  dnd_session.cpp
app/src/: LLMInference.cpp
research/: llm_system_prompt  research.md
